src/test/ui/typeck/issue-90319.stderr
error[E0412]: cannot find type `Thing` in this scope
  --> $DIR/issue-90319.rs:14:23
   |
LL |     let thing = get::<Thing>();
   |                       ^^^^^ not found in this scope

error[E0275]: overflow evaluating the requirement `_: Sized`
  --> $DIR/issue-90319.rs:16:5
   |
LL |     Trait::method(&wrapper);
   |     ^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_90319`)
note: required because of the requirements on the impl of `Trait` for `Wrapper<&_>`
  --> $DIR/issue-90319.rs:7:13
   |
LL | impl<'a, T> Trait for Wrapper<&'a T> where Wrapper<T>: Trait {}
   |             ^^^^^     ^^^^^^^^^^^^^^
   = note: 128 redundant requirements hidden
   = note: required because of the requirements on the impl of `Trait` for `Wrapper<&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&_>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0275, E0412.
For more information about an error, try `rustc --explain E0275`.
